--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,15 @@
 spring.application.name=data
 server.port=8080
 spring.datasource.url=jdbc:mysql://localhost:3306/marvellDB?useSSL=false
+# spring.datasource.url=jdbc:mysql://http://glpidev.sclab.marvell.com/MySQL DB?useSSL=false
+#spring.datasource.url=jdbc:mysql://glpidev.sclab.marvell.com/MySQLDB?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=arunamballa
-spring.jpa.hibernate.ddl-auto=create
+spring.datasource.password=lokeshpunati
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+ 
+spring.datasource.initialize=true
+spring.sql.init.mode=always
+spring.sql.init.platform=mysql
